--- a/style.css
+++ b/style.css
@@ -28,10 +28,37 @@
   font-size: 20px;
   font-weight: bold;
   cursor: pointer;
+  position: relative;
+}
+
+.menu-item-text::after{
+  content:"";
+  display: block;
+  position: absolute;
+  right: 15px;
+  top: 50%;
+  border-style: solid;
+  border-width: 8px 5px 0 5px;
+  border-color: #17487d transparent transparent transparent;
 }
 
 .menu-item-text:hover{
   color:rgb(30, 87, 172)
+}
+
+.menu-item-text:hover~.menu-item-img{
+  display: block;
+}
+
+.menu-item-text:hover::after{
+  content:"";
+  display: block;
+  position: absolute;
+  right: 15px;
+  top: 50%;
+  border-style: solid;
+  border-width: 0 5px 8px 5px;
+  border-color: transparent transparent #17487d transparent;
 }
 
 .menu-item-input{
@@ -45,6 +72,17 @@
 
 .menu-item-input:checked ~ .menu-item-text{
   color:rgb(30, 87, 172);
+}
+
+.menu-item-input:checked ~ .menu-item-text::after{
+  content:"";
+  display: block;
+  position: absolute;
+  right: 15px;
+  top: 50%;
+  border-style: solid;
+  border-width: 0 5px 8px 5px;
+  border-color: transparent transparent #17487d transparent;
 }
 
 .menu-item-img{
